--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "browser-sync": "^2.18.13",
     "gulp": "^3.9.1"
+  },
+  "dependencies": {
+    "wowjs": "^1.1.3"
   }
 }
